# circuit-optimization-lab

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml  requirements-demo.txt  requirements-docs.txt  requirements-ml.txt  requirements-numba.txt  requirements.txt
PDK/: veriloga.va
benchmarks/: bench_afe.py  bench_chopper.py  bench_model.py  bench_periodic.py  bench_sweep.py
calibration/: README.md
circuitopt/: __init__.py  __main__.py  _campaign_sweep.py  _engine.py  _rust_campaign.py  _rust_lti.py  _rust_periodic.py  _rust_transient.py  ac_mna.py  ac_solver.py  adc.py  analysis_dispatch.py  analysis_options.py  cadence_netlist.py  calibration.py  chopper.py  circuit_loader.py  compiled_topology.py  corners.py  dataset.py  device_factory.py  device_model.py  diagnostics.py  explore.py  freepdk45_model.py  ngspice_ac.py  ngspice_char.py  ngspice_device.py  ngspice_process.py  ngspice_render.py  ngspice_transient.py  noise_solver.py  numba_kernels.py  optimize.py  osdi_device.py  osdi_host.py  osdi_transient.py  pac_solver.py  pmos_tft_model.py  pnoise_solver.py  (+13 more)
core/: __init__.py  __main__.py  ac_mna.py  ac_solver.py  adaptive_config.py  analysis_dispatch.py  analysis_options.py  cadence_netlist.py  calibration.py  chopper.py  circuit_loader.py  compiled_topology.py  corners.py  dataset.py  dc_solver.py  device_factory.py  device_model.py  diagnostics.py  explore.py  freepdk45_model.py  mc_corners.py  ngspice_char.py  ngspice_device.py  noise_solver.py  numba_kernels.py  optimize.py  osdi_device.py  osdi_host.py  osdi_transient.py  pac_solver.py  pmos_tft_model.py  pnoise_solver.py  psf.py  pss_solver.py  sky130_model.py  surrogate.py  surrogate_torch.py  topology.py  transient_profile.py  transient_solver.py
demo/: server.py
docs/: README.md  README_zh.md  afe_design_equations.md  calibration_closed_loop.md  cli_reference.md  cli_reference_zh.md  core_overview.md  core_overview_zh.md  design_cases.md  development.md  encapsulated-wandering-sparkle.md  environment_performance.md  freepdk45_fd_ota_design.md  freepdk45_sar_design.md  futureplan.md  gear2_integration_plan.md  getting_started.md  getting_started_zh.md  json_circuit_format.md  json_circuit_format_zh.md  mdac_ota_derivation.md  module_overview.md  module_overview_zh.md  ngspice_oracles.md  pdk_support.md  pdk_support_zh.md  project_review_2026-06-23.md  rust_core_rewrite_plan.md  service_api.md  service_api_zh.md  single_source_impl_plan.md  sky130_fd_ota_design.md  third_party_licenses.md  tsmc28_mdac_ota_design.md  tsmc28hpcp.md  tsmc28hpcp_zh.md
examples/: afe_explore.json  afe_testbench.py  afe_testbench_explore.py  find_max_gain.py  freepdk45_5t_ota.json  freepdk45_fd_ota.json  freepdk45_mdac_ota.json  freepdk45_mdac_ota_ac.json  freepdk45_mdac_ota_cmfb1.json  freepdk45_mdac_ota_cmfb2.json  freepdk45_mdac_ota_dmloop.json  freepdk45_mdac_ota_noise.json  freepdk45_sar3.json  freepdk45_sar3_explore.json  freepdk45_sar6.json  freepdk45_sar6_explore.json  mc_mismatch.py  mdac_ota_gen.py  plot_adc.py  plot_bode.py  plot_transient.py  resistor_load_stage.json  sc_lpf.json  sc_lpf.py  single_stage.json  sky130_5t_ota.json  sky130_chopper.json  sky130_fd_ota.json  sweep_vin_vout.py  tsmc28_mdac_ota_gen.py  tsmc28hpcp_5t_ota.json  tsmc28hpcp_mdac_ota.json  tsmc28hpcp_mdac_ota_ac.json  tsmc28hpcp_mdac_ota_cmfb1.json  tsmc28hpcp_mdac_ota_cmfb2.json  tsmc28hpcp_mdac_ota_code_transition.json  tsmc28hpcp_mdac_ota_dmloop.json  tsmc28hpcp_mdac_ota_noise.json  vcvs_amplifier.json
experiments/: freepdk45_mdac_ngspice_oracle_campaign.py  mdac_ota_pvt_campaign.py  tsmc28_5t_ota_compare.py  tsmc28_mdac_ngspice_oracle_campaign.py  tsmc28_mdac_pvt_campaign.py
experiments/rust_device/: Cargo.toml  pyproject.toml
experiments/rust_device/src/: lib.rs
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.css  (+2 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend.rs  lib.rs  main.rs
results/: README.md
rust/: Cargo.toml
rust/crates/co-bsim4/: Cargo.toml  build.rs
rust/crates/co-bsim4/csrc/: wrapper.h
rust/crates/co-bsim4/msvc_shim/ngspice/: config.h
rust/crates/co-bsim4/src/: lib.rs
rust/crates/co-core/: Cargo.toml
rust/crates/co-core/src/: bsim_transient.rs  campaign.rs  error.rs  lib.rs  lti.rs  mna.rs  otft.rs  otft_campaign.rs  periodic.rs  sar.rs  transient.rs
rust/crates/co-pdk/: Cargo.toml  PARITY.md
rust/crates/co-pdk/src/: freepdk45.rs  gformat.rs  json.rs  lib.rs  sky130.rs  tsmc28.rs
rust/crates/co-py/: Cargo.toml  build.rs  pyproject.toml
rust/crates/co-py/src/: lib.rs  sar_campaign.rs  silicon_campaign.rs
rust/crates/co-spice/: Cargo.toml
rust/crates/co-spice/src/: ast.rs  deck.rs  elaborate.rs  error.rs  lexer.rs  lib.rs  parser.rs  scope.rs
schemas/: circuit.schema.json
tests/: conftest.py  test_adc.py  test_afe_smoke.py  test_afe_testbench.py  test_binding.py  test_cadence_netlist.py  test_calibration.py  test_campaign_cold_dc.py  test_campaign_sweep_wiring.py  test_chopper.py  test_cli_numba_flag.py  test_cli_subcommands.py  test_compiled_topology.py  test_controlled_sources.py  test_corners.py  test_corners_campaign.py  test_dataset.py  test_dataset_campaign.py  test_demo_server.py  test_device_model.py  test_diagnostics.py  test_elements.py  test_engine.py  test_explore.py  test_freepdk45.py  test_freepdk45_native.py  test_freepdk45_sar6.py  test_freepdk45_transient.py  test_json_circuit.py  test_mdac_campaign_logic.py  test_mdac_ota.py  test_mdac_ota_pvt.py  test_mdac_ota_semantics.py  test_model_kernels.py  test_native_default_backends.py  test_numba_augmented.py  test_optimize.py  test_osdi_host.py  test_osdi_transient.py  test_otft_reference_mode.py  (+38 more)
tools/: calibrate_switch.py  freeze_engine_golden.py  profile_hotspots.py  run-ngspice.sh  slicap_afe_analysis.py  slicap_afe_symbolic.py  vacompile.sh  version.py
(+450 files in other folders)
