[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-optimization"
version = "0.1.0"
description = "Local circuit solvers and benchmarks for TFT circuit optimization."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "flask>=3.0",
]

[project.optional-dependencies]
numba = [
    "numba>=0.60",
]
test = [
    "pytest>=8.0",
    "jsonschema>=4.0",
]
dev = [
    "numba>=0.60",
    "pytest>=8.0",
    "jsonschema>=4.0",
]

[project.scripts]
circuit-opt = "core.__main__:main"

[tool.setuptools]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "cadence_regression: tests that compare against archived Cadence/Spectre references",
    "slow_regression: slower regression tests that still run by default",
]
