[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-optimization"
version = "1.4.1"
description = "Local analog-circuit simulation and optimization framework."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
    "circuitopt/compact_models/bsim4/native_src/NOTICE.md",
    "circuitopt/compact_models/bsim4/native_src/vendor/bsim4v5/B4TERMS_OF_USE",
]
requires-python = ">=3.10"
keywords = ["circuit", "simulation", "spice", "analog", "eda", "optimization", "surrogate"]
classifiers = [
    # NOTE: no "License ::" classifier — PEP 639 forbids it alongside the SPDX
    # `license = "MIT"` expression above (modern setuptools errors on the pair).
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.0",        # upper bound left to numba's metadata (0.66 → numpy<2.5)
    "scipy>=1.10",
    "numba>=0.66",       # required: solver hot paths are JIT kernels; 0.66 supports numpy 2.4
    # NOTE: flask is NOT a core dependency — the solver/CLI import zero flask.
    # Only demo/server.py uses it, so it lives in the [demo] extra below.
]

[project.urls]
Homepage = "https://github.com/751K/circuit-optimization-lab"
Repository = "https://github.com/751K/circuit-optimization-lab"
"Third-Party Notices" = "https://github.com/751K/circuit-optimization-lab/blob/main/THIRD_PARTY_NOTICES.md"

[project.optional-dependencies]
# Optional feature groups. Each maps to a real lazy import in circuitopt/ (or demo/):
#   ml       circuitopt/surrogate.py   (GBT surrogate + optimize loop; joblib for persist)
#   torch    circuitopt/surrogate_torch.py  (differentiable surrogate; heavier)
#   plot     circuitopt/__main__.py plot subcommand + examples/plot_*.py
#   parquet  circuitopt/dataset.py     (optional .parquet dataset export)
#   demo     demo/server.py      (Flask AFE Tuner web app)
#   serve    circuitopt/service/ (FastAPI local service layer + `circuitopt serve` CLI)
ml = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
torch = [
    "torch>=2.2",
]
plot = [
    "matplotlib>=3.7",
]
parquet = [
    "pyarrow>=14.0",
]
demo = [
    "flask>=3.0",
]
serve = [
    "fastapi>=0.110",    # circuitopt/service/app.py (create_app + routes)
    "uvicorn>=0.27",     # circuitopt/service/cli.py  (programmatic server start)
]
test = [
    "pytest>=8.0",
    "jsonschema>=4.0",
    "flask>=3.0",        # tests/test_demo_server.py imports demo.server
    "fastapi>=0.110",    # tests/test_service.py imports circuitopt.service.app
    "uvicorn>=0.27",     # serve extra's runtime pair (kept aligned with fastapi)
    "httpx>=0.27",       # fastapi.testclient.TestClient requires httpx
]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.0",
    "flask>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "ruff>=0.6",
]
# Everything installable at once (excludes torch, which is heavy / env-specific).
all = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "flask>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
circuit-opt = "circuitopt.__main__:main"

[tool.setuptools]
# Top-level import name. Renamed from the generic `core` in 0.2.0 — this was the
# blocker for public PyPI publishing (name collisions in shared environments).
# ``circuitopt.service`` is listed explicitly: with an explicit ``packages`` list
# setuptools does NOT auto-discover subpackages, so it must be named here.
packages = [
    "circuitopt",
    "circuitopt.service",
    "circuitopt.spice",
    "circuitopt.pdk",
    "circuitopt.pdk.freepdk45",
    "circuitopt.pdk.sky130",
    "circuitopt.pdk.tsmc28",
    "circuitopt.compact_models",
    "circuitopt.compact_models.bsim4",
]

[tool.setuptools.package-data]
"circuitopt.compact_models.bsim4" = [
    "native_src/*.c",
    "native_src/*.md",
    "native_src/vendor/bsim4v5/*",
    "native_src/vendor/include/ngspice/*",
    "native_src/vendor/support/*",
]
"circuitopt.pdk.sky130" = ["cards/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not ngspice_oracle and not heavy_e2e'"
markers = [
    "cadence_regression: tests that compare against archived Cadence/Spectre references",
    "ngspice_oracle: optional tests that launch ngspice or validate its oracle-only workflows",
    "slow_regression: slower regression tests that still run by default",
    # heavy_e2e: complete SAR/ADC conversions on the native silicon backend
    # (minutes each on a machine with PDK cards; they made the default suite
    # take ~22 min). Run explicitly: pytest -m heavy_e2e. Assigned centrally
    # in tests/conftest.py.
    "heavy_e2e: heavyweight end-to-end silicon conversion regressions, excluded from the default run",
]

[tool.ruff]
# Lightweight lint: catch real bugs, not style. The numerical kernels
# intentionally run long lines and dense expressions, so formatting rules
# (E501 line length, whitespace) are deliberately NOT enabled -- this is a
# bug-catcher that backstops the manual pytest gate, not a reformatter.
#   ruff check .          # scan
#   ruff check --fix .    # apply the safe auto-fixes (unused imports, etc.)
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# F  = pyflakes: unused imports/variables, undefined names, f-strings without
#      placeholders, redefinitions, import shadowing -- the high-signal,
#      low-false-positive rules that find actual mistakes.
# E9 = syntax errors (IOError/tokenizer failures).
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports names for the public API; "unused import" is intended.
"__init__.py" = ["F401"]
