# CircuitOpt compiled-core workspace.
#
# Layout:
#   crates/co-core   — device, MNA, LTI, and transient solver kernels
#   crates/co-bsim4  — Berkeley BSIM4.5 host
#   crates/co-spice  — HSPICE parameter expression engine (lexer/parser/evaluator)
#   crates/co-pdk    — FreePDK45 / SKY130 / TSMC28 PDK compilers (numeric cards)
#   crates/co-py     — PyO3 extension `circuitopt_core` joining both to Python
#
# The version lives ONLY here, under [workspace.package]; every member inherits
# it via `version.workspace = true`. tools/version.py rewrites this single line
# from the canonical pyproject.toml value (see _cargo_workspace_with_version).
[workspace]
# resolver "3" is the edition-2024 default; a workspace must state it explicitly.
resolver = "3"
members = [
    "crates/co-bsim4",
    "crates/co-core",
    "crates/co-spice",
    "crates/co-pdk",
    "crates/co-py",
]

[workspace.package]
version = "1.4.0"
edition = "2024"
license = "MIT"
