[package]
name = "rust_device"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_device"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
