[package]
name = "co-bsim4"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust host for the Berkeley BSIM4.5 compact model (R2: build-time vendor C + ported host)."

[dependencies]
libc = "0.2"

[build-dependencies]
# cc compiles the vendored Berkeley BSIM4.5 C at build time (D-a); bindgen
# generates the FFI struct layouts / function signatures from the same headers
# host.c uses, so the ported Rust host shares an identical ABI with the vendor.
cc = "1"
bindgen = "0.71"
