[package]
name = "co-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PyO3 extension module `circuitopt_core` for CircuitOpt."

[lib]
# Python import name. Must stay `circuitopt_core` — circuitopt/_engine.py imports
# it by this name to detect the compiled core.
name = "circuitopt_core"
crate-type = ["cdylib"]
# No Rust-level tests: this crate is exercised from Python (tests/test_engine.py
# and the maturin wheel import). Disabling the harness keeps `cargo test
# --workspace` green — a cdylib+pyo3 test binary would need libpython on its
# runtime rpath, which is not guaranteed outside a maturin/CI environment.
test = false
doctest = false

[dependencies]
# The extension links the numerical core, the BSIM4 host, and the SPICE
# expression engine.
co-core = { path = "../co-core" }
co-bsim4 = { path = "../co-bsim4" }
co-spice = { path = "../co-spice" }
# abi3-py310: one wheel works on CPython >= 3.10. The `extension-module` feature
# is added automatically by maturin at wheel-build time (it must stay OFF here so
# `cargo test`/`cargo clippy` can link libpython for the workspace test harness).
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
numpy = "0.29.0"
